re-stucture the github folder

--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -51,9 +51,10 @@
       <div class="container">
         <div class="row">
           <div class="col">
+            {% if date is defined %}
+            <h4 style="color:white; text-align:center">Nutritional contents of your meal on {{date}}</h2>
             <div id ="plot1">
-                      
-                                
+            {% endif %}                    
             </div>
             <p style=”padding-bottom: 2ex; “></p>
             <div id ="plot2">
