--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,4 @@
-
-{% extends "layout.html" %}
-{% block pagetitle %}Dashboard{% endblock %}
-{% block bodycontent %}
+-{% extends "layout.html" %} {% block pagetitle %}Dashboard{% endblock %} {% block bodycontent %}
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 
@@ -12,22 +9,20 @@
                 <h4>Today's Statistics</h4>
                 <table class="table table-dark" id="diary-table">
 
-
-                    <thead>                  
+                    <thead>
                         <tr>
-                          <th scope="col"></th> </th>
-                          <th scope="col">Calories (kcal)</th>
-                          <th scope="col">Carbs (g)</th>
-                          <th scope="col">Proteins (g)</th>
-                          <th scope="col">Sodium (mg)</th>
-                          <th scope="col">Water (L)</th>
-                          <th scope="col">Fiber (g)</th>                      
+                            <th scope="col"></th>
+                            <th scope="col">Calories (kcal)</th>
+                            <th scope="col">Carbs (g)</th>
+                            <th scope="col">Proteins (g)</th>
+                            <th scope="col">Sodium (mg)</th>
+                            <th scope="col">Water (L)</th>
+                            <th scope="col">Fiber (g)</th>
                         </tr>
                     </thead>
-              
+
                     <tbody>
-                    <!-- Code -->
-                    
+
                         <tr>
                             <th scope="row">Totals</th>
 
@@ -38,38 +33,33 @@
                             <td>{{(daily_stats.water)|round}}</td>
                             <td>{{(daily_stats.fiber)|round}}</td>
 
-                        </tr> 
-                   
-                                 
-                          
-                     <tr>
-                        <th scope="row">Remaining</th>
+                        </tr>
 
-                             <td>{{ (daily_goal_list[0] - results[0])|round }} </td>
+                        <tr>
+                            <th scope="row">Remaining</th>
+
+                            <td>{{ (daily_goal_list[0] - results[0])|round }} </td>
                             <td>{{ (daily_goal_list[1] - results[1])|round }}</td>
                             <td>{{ (daily_goal_list[2] - results[2])|round }}</td>
                             <td>{{ (daily_goal_list[3] - results[3])|round }}</td>
                             <td>{{ (daily_goal_list[4] - results[4])|round }}</td>
                             <td>{{ (daily_goal_list[5] - results[5])|round }}</td>
 
-                    </tr> 
+                        </tr>
 
-                    <tr>
-                        <th scope="row">Your daily goal</th>
-                             <td>{{ daily_goal_list[0] }} </td>
-                            <td>{{ daily_goal_list[1]  }}</td>
-                            <td>{{ daily_goal_list[2]  }}</td>
-                            <td>{{ daily_goal_list[3]  }}</td>
-                            <td>{{ daily_goal_list[4]  }}</td>
-                            <td>{{ daily_goal_list[5]  }}</td>
-                    </tr> 
-              
-                  </tbody>
-              
-                  
+                        <tr>
+                            <th scope="row">Your daily goal</th>
+                            <td>{{ daily_goal_list[0] }} </td>
+                            <td>{{ daily_goal_list[1] }}</td>
+                            <td>{{ daily_goal_list[2] }}</td>
+                            <td>{{ daily_goal_list[3] }}</td>
+                            <td>{{ daily_goal_list[4] }}</td>
+                            <td>{{ daily_goal_list[5] }}</td>
+                        </tr>
+
+                    </tbody>
+
                 </table>
-
-                
 
             </div>
 
@@ -80,13 +70,12 @@
                     <h4>Quick Add</h4>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12"><H4 style="color:#ff0000">{{msg}}</H4></div>
-                  </div>
+                    <div class="col-lg-12">
+                        <H4 style="color:#ff0000">{{msg}}</H4>
+                    </div>
+                </div>
                 <form action="" class="register-form" method="POST">
-                    {{ form.hidden_tag() }}
-                    {{ form.csrf_token }}
-                    {{ form.name }}
-                    {% if form.errors %}
+                    {{ form.hidden_tag() }} {{ form.csrf_token }} {{ form.name }} {% if form.errors %}
                     <ul style="color:#ff0000; list-style-type:none" class="errors">
                         {% for error in form.errors %}
                         <li>
@@ -94,38 +83,38 @@
                         </li>
                         {% endfor %}
                     </ul>
-                
+
                     {% endif %}
                     <div class="row">
                         <div class="col-2">
                             <label for="name">Date</label>
                             <!-- PK -->
                             <input type="date" id="inputdate" name="inputdate" max=maxDate>
-                          </div>
+                        </div>
                         <div class="col-2">
-                          <label for="name">Type</label>
-                          <input list="mealType" name="meal_category" placeholder="When?" id="meal_category">
+                            <label for="name">Type</label>
+                            <input list="mealType" name="meal_category" placeholder="When?" id="meal_category">
                             <datalist id="mealType">
                                 <option value="Breakfast">
-                                <option value="Lunch">
-                                <option value="Dinner">
-                                <option value="Snacks">
+                                    <option value="Lunch">
+                                        <option value="Dinner">
+                                            <option value="Snacks">
                             </datalist>
                         </div>
                         <div class="col">
-                          <label for="name">Food</label>
-                          <input type="text" placeholder="What?" id="foodName" name="food_desc">
-                          <input type="hidden" id="foodNameId" name="foodNameId">
+                            <label for="name">Food</label>
+                            <input type="text" placeholder="What?" id="foodName" name="food_desc">
+                            <input type="hidden" id="foodNameId" name="foodNameId">
                         </div>
                         <div class="col-2">
                             <label for="name">Servings</label>
                             <input type="number" min="1" max="20" placeholder="How much?" id="servings_count" name="servings_count">
-                          </div>
-                            </div>
-                            <button type="submit" class="register-btn">Add</button>
+                        </div>
+                    </div>
+                    <button type="submit" class="register-btn">Add</button>
                 </form>
             </div>
-        </div>  
+        </div>
         <div class="row-sm">
             <div class="register-text">
                 <div class="section-title">
@@ -133,100 +122,83 @@
 
                     <table class="table table-dark" id="diary-table">
 
-
-                        <thead>                  
+                        <thead>
                             <tr>
-                              <th scope="col"></th> </th>
-                              <th scope="col">Date</th>
-                              <th scope="col">Meal Type</th>
-                              <th scope="col">Food</th>
-                              <th scope="col">Servings</th>
-                              <!-- <th scope="col">Calories (kcal)</th>                       -->
+                                <th scope="col"></th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Meal Type</th>
+                                <th scope="col">Food</th>
+                                <th scope="col">Servings</th>
                             </tr>
                         </thead>
 
                         <tbody>
-                                <!-- <tr><th scope="row">{{ top5_entries.count }}</th></tr> -->
-                                {% for query_val in top5_entries %}
-                                <tr>
-                                    <th scope="row">{{loop.index}}</th>
-                                    <td>{{ query_val.meal_date }}</td>
-                                    <td>{{ query_val.type }}</td>
-                                    <td>{{ query_val.meal_desc }}</td>
-                                    <td>{{ query_val.amount |round | int }}</td>
-                                </tr> 
-                                {% endfor %}
-                                                       
+                            {% for query_val in top5_entries %}
+                            <tr>
+                                <th scope="row">{{loop.index}}</th>
+                                <td>{{ query_val.meal_date }}</td>
+                                <td>{{ query_val.type }}</td>
+                                <td>{{ query_val.meal_desc }}</td>
+                                <td>{{ query_val.amount |round | int }}</td>
+                            </tr>
+                            {% endfor %}
+
                         </tbody>
-                      
-                  
-                      
+
                     </table>
                 </div>
             </div>
-        </div> 
-        
-
-            
         </div>
+
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
-    $( "#foodName" ).autocomplete({
-        source: function (request, response) {
-        $.getJSON("/nutriquicksearch?term=" + request.term, function (data) {
-            
-            response(
-                $.map(data, function (key) {
+    $("#foodName").autocomplete({
+        source: function(request, response) {
+            $.getJSON("/nutriquicksearch?term=" + request.term, function(data) {
 
-                    descr = '';
-                    if(key[2] !=''){
-                        descr = ' ['+key[2];
-                        if(key[3] !=0){
-                            descr=descr+'  ('+key[3]+' g)';                        
+                response(
+                    $.map(data, function(key) {
+
+                        descr = '';
+                        if (key[2] != '') {
+                            descr = ' [' + key[2];
+                            if (key[3] != 0) {
+                                descr = descr + '  (' + key[3] + ' g)';
+                            }
+                            descr = descr + ']';
                         }
-                        descr=descr+']';
-                    }
 
+                        return {
 
-                return {
-                    
-                    label: key[1] + descr,
-                    value: key[0]
-                };
-            }));
-        });
-    },
+                            label: key[1] + descr,
+                            value: key[0]
+                        };
+                    }));
+            });
+        },
 
-        select( event, ui ){
-        $('#foodNameId').val(ui.item.value);
-        $('#foodName').val(ui.item.label);
-        return false;
-    },
+        select(event, ui) {
+            $('#foodNameId').val(ui.item.value);
+            $('#foodName').val(ui.item.label);
+            return false;
+        },
 
-      minLength: 2,
+        minLength: 2,
 
-    } );
-
-   
- 
+    });
 </script>
 
 <script src="/static/js/date.js"></script>
 
-
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-  <script> 
-    {% for message in messages %}
-      alert('{{ message }}')
-    {% endfor %}
+{% with messages = get_flashed_messages() %} {% if messages %}
+<script>
+    { %
+        for message in messages %
+    }
+    alert('{{ message }}') { % endfor %
+    }
 </script>
-  {% endif %}
-{% endwith %}
-
-  
-
-  {% endblock %}
+{% endif %} {% endwith %} {% endblock %}
