--- a/templates/food_history.html
+++ b/templates/food_history.html
@@ -1,38 +1,28 @@
+{% extends "layout.html" %} {% block pagetitle %}Nutrometer{% endblock %} {% block bodycontent %}
 
-{% extends "layout.html" %}
-{% block pagetitle %}Nutrometer{% endblock %}
-{% block bodycontent %}
-
-
-
-
-
-
-  
-  <section class="hero-section set-bg" data-setbg="./static/images/food.jpg">
+<section class="hero-section set-bg" data-setbg="./static/images/food.jpg">
     <div class="container">
         <div class="row">
             <div class="col-md">
-              <div class="register-text">
-                <div class="section-title">
-                    <h4>Your Food History</h4>
+                <div class="register-text">
+                    <div class="section-title">
+                        <h4>Your Food History</h4>
 
-                    <table class="table table-dark" id="diary-table">
+                        <table class="table table-dark" id="diary-table">
 
-                      {% if top100_entries.count() != 0 %}
-                      
-                        <thead>                  
-                            <tr>
-                              <th scope="col"></th> </th>
-                              <th scope="col">Date</th>
-                              <th scope="col">Meal Type</th>
-                              <th scope="col">Food</th>
-                              <th scope="col">Servings</th>
-                              <!-- <th scope="col">Calories (kcal)</th>                       -->
-                            </tr>
-                        </thead>
+                            {% if top100_entries.count() != 0 %}
 
-                        <tbody>
+                            <thead>
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Meal Type</th>
+                                    <th scope="col">Food</th>
+                                    <th scope="col">Servings</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
                                 {% for query_val in top100_entries %}
                                 <tr>
                                     <th scope="row">{{loop.index}}</th>
@@ -40,24 +30,24 @@
                                     <td>{{ query_val.type }}</td>
                                     <td>{{ query_val.meal_desc }}</td>
                                     <td>{{ query_val.amount |round | int }}</td>
-                                </tr> 
+                                </tr>
                                 {% endfor %}
-                               
-                                
-                                                       
-                        </tbody>
-                        {% else %}
-                        <tbody>
-                        <tr><th scope="row">You do not have any food history. Start entering through dashboard!</th></tr>
-                      </tbody>
-                        {% endif %}
-                  
-                      
-                    </table>
+
+                            </tbody>
+                            {% else %}
+                            <tbody>
+                                <tr>
+                                    <th scope="row">You do not have any food history. Start entering through dashboard!</th>
+                                </tr>
+                            </tbody>
+                            {% endif %}
+
+                        </table>
+                    </div>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
-  </section>
+</section>
 
-  {% endblock %}
+{% endblock %}
